RESOLVED FIXED60390
REGRESSION (r81992): Portions of ticketmaster site render blank
https://bugs.webkit.org/show_bug.cgi?id=60390
Summary REGRESSION (r81992): Portions of ticketmaster site render blank
Dave Hyatt
Reported 2011-05-06 11:23:46 PDT
<rdar://problem/9364449> REGRESSION (r81992): portions of ticketmaster site render blank Simplified layout messes up when a positioned object inside a relative positioned inline needs a relayout.
Attachments
Patch (26.13 KB, patch)
2011-05-06 11:26 PDT, Dave Hyatt
mitz: review+
Dave Hyatt
Comment 1 2011-05-06 11:26:32 PDT
Dave Hyatt
Comment 2 2011-05-06 11:51:14 PDT
Fixed in r85964.
Ademar Reis
Comment 3 2011-05-10 13:34:15 PDT
Revision r85964 cherry-picked into qtwebkit-2.2 with commit 0182f02 <http://gitorious.org/webkit/qtwebkit/commit/0182f02>
Note You need to log in before you can comment on or make changes to this bug.