https://bugs.webkit.org/show_bug.cgi?id=60390 (<rdar://problem/9364449>) REGRESSION (r81992): portions of ticketmaster site render blank

Reviewed by Dan Bernstein.

Make simplified layout skip from a positioned object out to its containing block.  There is no
need to dirty the intermediate inlines, and in this case it's actively harmful, since the
block responsible for the layout of the positioned object doesn't get m_posChildNeedsLayout set.

Source/WebCore:

Added fast/block/positioning/hiding-inside-relpositioned-inline.html

* rendering/RenderObject.h:
(WebCore::RenderObject::markContainingBlocksForLayout):

LayoutTests:

* fast/block/positioning/hiding-inside-relpositioned-inline.html: Added.
* platform/mac/fast/block/positioning/hiding-inside-relpositioned-inline-expected.png: Added.
* platform/mac/fast/block/positioning/hiding-inside-relpositioned-inline-expected.txt: Added.



Canonical link: https://commits.webkit.org/75645@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85964 268f45cc-cd09-0410-ab3c-d52691b4dbfc